--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <div class="faq-content">
                   <!-- <div class="row"> -->
                   <!-- <div class="col-lg-6"> -->
-                  <p>駐車場正面入口から入っていただき、左手側に駐車場がございます。<br>当日は学生が誘導いたしますので、安心してお越しください。</p>
+                  <p>駐車場正面入口から入っていただき、左手側に駐車場がございます。<br>当日は職員が誘導いたしますので、安心してお越しください。</p>
                   <!-- </div> -->
                   <!-- <div class="col-lg-6">
                       <img src="./image/map.png" style="max-width: 70%; border-radius: 8px;" id="map" class="img-fluid">
