--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="image/stick.jpg" class="img-fluid event-embed-img" alt="">
+              <img src="image/stick.JPG" class="img-fluid event-embed-img" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4><a href="#event-form-button">フリフリ棒作り</a></h4>
@@ -459,7 +459,8 @@
                   <p>
                     学校へのアクセスについては、学校ホームページのアクセスよりご確認ください。
                     <br>
-                    <a href="https://www3.jeed.go.jp/shimane/college/access/" target="_blank" rel="noopener noreferrer">アクセス</a>
+                    <a href="https://www3.jeed.go.jp/shimane/college/access/" target="_blank"
+                      rel="noopener noreferrer">アクセス</a>
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
